--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -303,7 +303,7 @@
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\RegisterViewModel.cs" />
     <Compile Include="Model\Varomides.cs" />
-    <Compile Include="Models\VaromidesViewModel.cs" />
+    <Compile Include="Models\RegistrerVarroeViewModel.cs" />
     <Compile Include="Models\VaroViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
