Lots of changes, halfwaty there

--- a/SWD_GUI_Assignment/SWD_GUI_Assignment.csproj
+++ b/SWD_GUI_Assignment/SWD_GUI_Assignment.csproj
@@ -68,7 +68,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Views\AddDebtorWindow.xaml">
+    <Page Include="Views\AddJobWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\AddModelWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -86,14 +90,20 @@
     </Compile>
     <Compile Include="Interfaces\INavigationService.cs" />
     <Compile Include="Interfaces\IShowViewOfViewModel.cs" />
+    <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\Model.cs" />
     <Compile Include="Services\DialogCloser.cs" />
     <Compile Include="Services\NavigationService.cs" />
+    <Compile Include="ViewModels\AddJobViewModel.cs" />
     <Compile Include="ViewModels\EditDebtorViewModel.cs" />
-    <Compile Include="ViewModels\AddDebtorViewModel.cs" />
+    <Compile Include="ViewModels\AddModelViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
-    <Compile Include="Views\AddDebtorWindow.xaml.cs">
-      <DependentUpon>AddDebtorWindow.xaml</DependentUpon>
+    <Compile Include="Views\AddJobWindow.xaml.cs">
+      <DependentUpon>AddJobWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddModelWindow.xaml.cs">
+      <DependentUpon>AddModelWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EditDebtorWindow.xaml.cs">
       <DependentUpon>EditDebtorWindow.xaml</DependentUpon>
