--- a/SWD_GUI_Assignment/SWD_GUI_Assignment.csproj
+++ b/SWD_GUI_Assignment/SWD_GUI_Assignment.csproj
@@ -132,7 +132,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Capture.PNG" />
+    <Resource Include="Images\Tree.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
