--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -302,7 +302,7 @@
     <Compile Include="Models\IndexViewModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\RegisterViewModel.cs" />
-    <Compile Include="Model\Varomides.cs" />
+    <Compile Include="Model\Sensor.cs" />
     <Compile Include="Models\RegistrerVarroeViewModel.cs" />
     <Compile Include="Models\VaroViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
