--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\LokationWithSimpleTree.cs" />
     <Compile Include="Model\ApplicationDbContext.cs" />
     <Compile Include="Model\ApplicationUser.cs" />
     <Compile Include="Models\IndexViewModel.cs" />
